--- a/Resources/Config/VTuberConfig.json
+++ b/Resources/Config/VTuberConfig.json
@@ -18,5 +18,10 @@
 	"Id": "1004",
 	"Name": "真白花音",
 	"SkillIds": [1001,1005]
+  },
+  {
+	"Id": "1005",
+	"Name": "星瞳",
+	"SkillIds": [1001,1005]
   }
 ]
